--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Free Translate API</title>
+    <!-- Bootstrap 5.2 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <!-- Highlight.js 11.6.0 -->
+    <link
+      rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Free Translate API</title>
-  <!-- Bootstrap 5.2 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <!-- Highlight.js 11.6.0 -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/default.min.css">
-</head>
+  <body>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <h1 class="me-3">Free Translate API</h1>
 
-<body>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg">
-      <h1 class="me-3">Free Translate API</h1>
+        <a
+          href="https://github.com/cuberkam/free_translate_api"
+          type="button"
+          class="btn btn-dark mb-2"
+          target="_blank"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="16"
+            height="16"
+            fill="currentColor"
+            class="bi bi-github mb-1"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+            ></path>
+          </svg>
+          GitHub
+        </a>
+      </nav>
 
-      <a href="https://github.com/cuberkam/free_translate_api" type="button" class="btn btn-dark mb-2" target="_blank">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github mb-1"
-          viewBox="0 0 16 16">
-          <path
-            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z">
-          </path>
-        </svg>
-        GitHub
-      </a>
-    </nav>
-    <p>With the Free Translate API, you can translate words or sentences into the language you want. There are 2 ways to
-      do this.</p>
+      <div class="container">
 
-    <strong> <mark>URL Parameters</mark> </strong>
-    <ul>
-      <li>sl = Source language code</li>
-      <li>dl = Destination language code</li>
-      <li>text = word or sentence</li>
-    </ul>
+        <div class="card border-warning mb-3" style="max-width: 600px">
+          <div class="card-body">
+            <div class="d-flex align-items-start gap-3">
+              <div>
+                <h5 class="card-title mb-1">⚠️ Important Notice</h5>
+                <p class="card-text mb-0 text-muted">
+                  The website hosted on PythonAnywhere is for demonstration purposes only. This is not a public API service and does not support external API hosting. </br> If you want to use this project as an API, please clone the repository and host it on your own server or cloud platform.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <strong><mark>First Way:</mark></strong> By querying with sl, dl and text parameters.
-    <br> <br>
-    <strong><mark>Second Way:</mark></strong> By querying with dl and text parameters. The language of the text
-    parameter is
-    automatically detected.
-    <br> <br>
+      <p>
+        With the Free Translate API, you can translate words or sentences into
+        the language you want. There are 2 ways to do this.
+      </p>
 
-    <blockquote class="p-2 bg-info bg-opacity-25" style="display: unset;">
-      Use the <code>/languages</code> endpoint to see which languages are supported.
-    </blockquote>
+      <strong> <mark>URL Parameters</mark> </strong>
+      <ul>
+        <li>sl = Source language code</li>
+        <li>dl = Destination language code</li>
+        <li>text = word or sentence</li>
+      </ul>
 
-    <br> <br>
-    <hr>
-    Endpoint:
-    <pre><code> /translate?sl=en&dl=tr&text=example  OR  /translate?dl=tr&text=example</code></pre>
-    Response:
-    <pre><code class="language-json">
+      <strong><mark>First Way:</mark></strong> By querying with sl, dl and text
+      parameters. <br />
+      <br />
+      <strong><mark>Second Way:</mark></strong> By querying with dl and text
+      parameters. The language of the text parameter is automatically detected.
+      <br />
+      <br />
+
+      <blockquote class="p-2 bg-info bg-opacity-25" style="display: unset">
+        Use the <code>/languages</code> endpoint to see which languages are
+        supported.
+      </blockquote>
+
+      <br />
+      <br />
+      <hr />
+      Endpoint:
+      <pre><code> /translate?sl=en&dl=tr&text=example  OR  /translate?dl=tr&text=example</code></pre>
+      Response:
+      <pre><code class="language-json">
       {
         "source-language": "en",
         "source-text": "example\n",
@@ -176,11 +215,11 @@
         "see-also": null
       }
     </code></pre>
-    <hr>
-    Endpoint:
-    <pre><code> /translate?sl=en&dl=tr&text=hello%20world  OR  /translate?dl=tr&text=hello%20world</code></pre>
-    Response:
-    <pre><code class="language-json">
+      <hr />
+      Endpoint:
+      <pre><code> /translate?sl=en&dl=tr&text=hello%20world  OR  /translate?dl=tr&text=hello%20world</code></pre>
+      Response:
+      <pre><code class="language-json">
       {
         "source-language": "en",
         "source-text": "hello world",
@@ -203,13 +242,10 @@
         "see-also": null
       }
     </code></pre>
-
-
-  </div>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
-  <script>
-    hljs.highlightAll();
-  </script>
-</body>
-
+    </div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+    <script>
+      hljs.highlightAll();
+    </script>
+  </body>
 </html>
